--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^3.2.13"
+    "axios": "^1.13.2",
+    "semantic-ui-css": "^2.5.0",
+    "sweetalert2": "^11.26.3",
+    "vue": "^3.2.13",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0"
